--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -7,6 +7,10 @@ on:
     branches-ignore:
       - main
 jobs:
+  Build-Assets:
+    runs-on: ubuntu-latest
+    steps:
+
   Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
@@ -17,5 +21,7 @@ jobs:
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Run assets compression script
+        run: ./scripts/script.sh
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
